tests/fixtures/invalid/forbidden_assignment.sr
rule "EQ: Assignment" in underlying:
    when x = 1:
        then emit_signal(kind="BUY")

